# jupyterlab-theme-solarized-dark

./: .copier-answers.yml  .cruft.json  .gitignore  .prettierignore  .stylelintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  eslint.config.mjs  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.tsbuildinfo
.github/workflows/: build.yml  check-release.yml
jupyterlab_theme_solarized_dark/: __init__.py
src/: index.ts
style/: base.css  index.css  index.scss  variables.css  variables.scss
